# FP-DDP

./: .gitignore  .gitmodules  CMakeLists.txt  DECISIONS.md  EVIDENCE.md  PLAN.md  README.md  TODO.md  acados_cartpole.json  acados_pend2.json  acados_unicycle.json
c_generated_code/: Makefile  acados_sim_solver_cartpole.c  acados_sim_solver_cartpole.h  acados_sim_solver_pend2.c  acados_sim_solver_pend2.h  acados_sim_solver_unicycle.c  acados_sim_solver_unicycle.h  acados_solver.pxd  acados_solver_cartpole.c  acados_solver_cartpole.h  acados_solver_pend2.c  acados_solver_pend2.h  acados_solver_unicycle.c  acados_solver_unicycle.h  main_cartpole.c  main_pend2.c  main_sim_cartpole.c  main_sim_pend2.c  main_sim_unicycle.c  main_unicycle.c
c_generated_code/cartpole_model/: cartpole_impl_dae_fun.c  cartpole_impl_dae_fun_jac_x_xdot_u.c  cartpole_impl_dae_fun_jac_x_xdot_u_z.c  cartpole_impl_dae_fun_jac_x_xdot_z.c  cartpole_impl_dae_jac_x_xdot_u_z.c  cartpole_model.h
c_generated_code/pend2_model/: pend2_impl_dae_fun.c  (+5 more)
compare/: README.md  acados_cartpole.py  acados_pendulum.py  acados_unicycle.py  bench_irk_acados.py  compare.py  stress_acados.py  stress_compare.py
files/: README.md  algebra.hpp  being.hpp  collocation.hpp  concepts.hpp  demo.cpp  inference.hpp  judgment.hpp  orthogonal.hpp  stages.hpp
scripts/: build_acados.sh  build_deps.sh  stress.sh
test/: bench_irk.cpp  cmp_cartpole.cpp  cmp_pendulum.cpp  cmp_unicycle.cpp  ddp_test.cpp  exact_hessian_test.cpp  globalization_test.cpp  irk_demo.cpp  lqr_test.cpp  model_smoke.cpp  sens_test.cpp  stress_fpddp.cpp
(+24 files in other folders)
